# UR5_Pick-Place_Hardware

./: LICENSE  README.md  package.xml
Pre-Proposal/: 119197066_118438832_119400241_preproposal.odt
Proposal/: 119197066_119400241_118438832_proposal.docx
Report/: ENPM662_Pick&Place_using_UR5.docx
Results/: UR5_Gazebo_Demo.avi
UR5_Model/: UR5.sldasm
UR5_Model/Assemblies/: Base.sldasm  J1.sldasm
UR5_Model/Parts/: 31320.sldprt
src/: pick_place_moveit_joint_control.cpp
src/ur5_moveit/: .setup_assistant  package.xml
src/ur5_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  ur5.srdf
src/ur5_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/ur5v1/: CMakeLists.txt  package.xml
src/ur5v1/config/: config.yaml
src/ur5v1/launch/: control.launch
src/ur5v1/src/: IK_Nemerical_DH.py  pick_and_place.py  pick_place_moveit_joint_control.cpp  robot_joint_publisher.py  robot_params.py  utilities.py
src/ur5v1/urdf/: ur5_moveit.urdf  ur5_original.urdf
src/ur5v1_ik_kinematics_plugin/: CMakeLists.txt  README_IK_Plugin_Moveit.md  package.xml  ur5v1_ik_kinematics_description.xml
src/ur5v1_ik_kinematics_plugin/include/: dhparam.h
src/ur5v1_ik_kinematics_plugin/src/: dhparam.cpp  ur5v1_ik_kinematics_plugin.cpp
ur5v1/: CMakeLists.txt
